_Source/force-app/main/default/objects/BI_Regional_Plan__c/BI_Regional_Plan__c.object-meta.xml
<CustomObject>
    <label>Regional Plan</label>
    <nameField>
        <label>Regional Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>