_Source/force-app/main/default/objects/BI_Regional_Plan__c/fields/BI_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Name__c</fullName>
    <formula>Owner:User.LastName + &apos; &apos; +  Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>