_Source/force-app/main/default/objects/BI_Regional_Plan__c/fields/BI_Parent__c.field-meta.xml
<CustomField>
    <fullName>BI_Parent__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + 
IF(NOT(ISBLANK(BI_Divisional_Plan__r.Name )), BI_Divisional_Plan__r.Id, 
Id), 

IF(NOT(ISBLANK(BI_Divisional_Plan__r.Name)), BI_Divisional_Plan__r.Name, 
Name),&quot; &quot;)</formula>
    <label>Parent</label>
    <type>Text</type>
</CustomField>