_Source/force-app/main/default/objects/BI_Regional_Plan__c/fields/BI_Progress_Overview__c.field-meta.xml
<CustomField>
    <fullName>BI_Progress_Overview__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00O1T000006QuqgUAC/view?fv0=&quot; &amp; TEXT(BI_Regional_Plan_Year__c ),&quot;View My Team Planning Progress Report&quot;)</formula>
    <label>Progress Overview</label>
    <type>Text</type>
</CustomField>