_Source/force-app/main/default/objects/BI_Regional_Plan__c/fields/BI_Related_Regional_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_Regional_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Regional Plan</label>
    <referenceTo>BI_Regional_Plan__c</referenceTo>
    <relationshipLabel>Related Regional Plans</relationshipLabel>
    <relationshipName>Regional_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>