_Source/force-app/main/default/objects/BI_Regional_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BI_Regional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Progress_Overview__c</columns>
    <columns>BI_Overarching_Focus_Strategy_Desc__c</columns>
    <columns>BI_Divisional_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Regional Plans</label>
</ListView>