_Source/force-app/main/default/objects/BI_Regional_Plan__c/listViews/All_My_Regional_Plans.listView-meta.xml
<ListView>
    <fullName>All_My_Regional_Plans</fullName>
    <columns>BI_Regional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Progress_Overview__c</columns>
    <columns>BI_Overarching_Focus_Strategy_Desc__c</columns>
    <columns>BI_Divisional_Plan__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Regional Plans - All</label>
</ListView>